# contrastive-privacy

./: .gitignore  APPROACH.md  LICENSE  README.md  experiments.sh  index.html  pyproject.toml  requirements.txt
data/: boats.txt  cars.txt  cats.txt  desks.txt  dogs.txt  lemons.txt  oranges.txt  paperclips.txt
data/avengers_large/: ejuawqv.txt  ejuaza4.txt  ejub2r3.txt  ejubtte.txt  ejuc72r.txt  ejucfx6.txt  ejucn9c.txt  ejud7a8.txt  ejudgnn.txt  ejudp4b.txt  ejudy9k.txt  ejuf2c5.txt  ejufi56.txt  ejufw8e.txt  ejug91h.txt  ejuh418.txt  ejuhgkv.txt  ejuhjpt.txt  ejuhm7x.txt  ejuhum6.txt  ejuhwcj.txt  ejuhzrq.txt  ejui7eu.txt  ejuinh9.txt  ejujf97.txt  ejujfgx.txt  ejujwpr.txt  ejukq1j.txt  ejulzb5.txt  ejumer2.txt  ejumv1f.txt  ejumzir.txt  ejun0m9.txt  ejunc9k.txt  ejunirx.txt  ejunu76.txt  ejuoagh.txt  ejupfwx.txt  ejuplfu.txt  ejupot2.txt  (+5 more)
data/avengers_small/: ejuj90j.txt  ejuokfd.txt  ejupcsh.txt  ejuq022.txt
notebooks/: inspect_results.ipynb
src/contrastive_privacy/: __init__.py  api.py  reporting.py
src/contrastive_privacy/scripts/: __init__.py  anonymize.py  compare_images.py  compare_texts.py  concept_resolution.py  create_mask.py  edit_image.py  generate_image.py  generate_results_webpage.py  identify_obfuscation_concepts.py  inpaint_image.py  open_results_webpage.py  reanalyze_image_resolution.py  reanalyze_text_resolution.py  recognize_entities.py  recognize_objects.py  resolution_analysis.py  search_reddit_body.py  similarity_analysis.py  text_anonymize.py  text_resolution_analysis.py
